# tree-of-life

./: .gitignore
frontend/: frontend.cabal
frontend/src/: Frontend.hs
frontend/src/Frontend/: Selection.hs
